# tokenSlasher

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  __main__.py  cli.py  dashboard_app.py  pyproject.toml  requirements.txt  train.sh
.github/workflows/: ci.yml
dashboard/: app.py
detector/: __init__.py  dedup.py  ingest.py  minhash.py  semantic.py
results/: errors.jsonl  lr_model.joblib  questions_metrics.txt  samples.jsonl  speed.txt  speed_eval.txt
sample_data/: README.md  mixed_quality.jsonl  sample_texts.txt  with_html.html
scripts/: eval_questions.py  pull_enron.py  train_lr.py
tests/: test_core.py  test_similarity_matrix.py  test_stream_parallel.py  test_v15_functionality.py
tokenslasher/: __init__.py  cli.py
tokenslasher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tokenslasher/detector/: __init__.py  dedup.py  features.py  file_ingest.py  filters.py  ingest.py  lsh_index.py  minhash.py  output.py  pipeline.py  similarity.py
