[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenslasher"
version = "1.0.0"
authors = [
  {name = "TokenSlasher Devs", email = "dev@example.com"}
]
description = "High-speed near-duplicate detection for massive text corpora."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
dependencies = [
  "datasketch>=1.5",
  "xxhash>=3.4",
  "numpy>=1.23",
  "tqdm>=4.64",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "sentence-transformers>=2.2",
  "spacy>=3.6",
  "psutil>=5.9",
]

[project.scripts]
tokenslasher = "detector.dedup:main"

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2", "torch"]
dashboard = ["streamlit>=1.28", "plotly>=5.18"]

[tool.setuptools]
packages = ["detector"]
include-package-data = true 