[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenslasher"
version = "1.5.0"
authors = [
  {name = "TokenSlasher Devs", email = "dev@example.com"}
]
description = "High-speed text data cleaning, filtering, and deduplication pipeline for massive corpora."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
]
dependencies = [
  "datasketch>=1.5",
  "xxhash>=3.4",
  "numpy>=1.23",
  "tqdm>=4.64",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-learn>=1.3",
  "sentence-transformers>=2.2",
  "spacy>=3.6",
  "psutil>=5.9",
  "langdetect>=1.0.9",
  "beautifulsoup4>=4.12",
  "presidio-analyzer>=2.2",
  "presidio-anonymizer>=2.2",
  "transformers>=4.30",
  "pyarrow>=14.0",
  "fastparquet>=2023.10",
  "chardet>=5.2",
  "lxml>=4.9",
]

[project.scripts]
tokenslasher = "tokenslasher.cli:main"

[project.optional-dependencies]
semantic = ["sentence-transformers>=2.2", "torch"]
dashboard = ["streamlit>=1.28", "plotly>=5.18"]
toxicity = ["detoxify>=0.5.2"]
perplexity = ["torch", "transformers"]

[tool.setuptools.packages.find]
include = ["tokenslasher*"]

[tool.ruff]
line-length = 100
ignore = ["E402"] 